Doc/force-app/main/default/objects/CampaignMember/fields/C_Team_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>C_Team_Sponsor__c</fullName>
    <formula>Referred_By__r.C_Team_Sponsor__r.Full_Name__c</formula>
    <label>C-Team Sponsor</label>
    <type>Text</type>
</CustomField>